<resources>
    <string name="app_name">Nhom14_ GalFourteenth</string>
    <string name="text_item_hinhanh">Hình ảnh</string>
    <string name="text_item_album">Album</string>
    <string name="text_item_taovideo">Tạo video</string>
    <string name="text_item_dachiase">Chia sẻ</string>
    <string name="favorite">yêu thích</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="content_description_search">content_description_search</string>
    <string name="search">Tìm kiếm</string>
    <string name="NewAlbum">Tạo album mới</string>
    <string name="content_description_more">conten_description_more</string>
    <string name="page_title">Hình ảnh</string>
    <string name="menu_detail_share">Chia sẻ</string>
    <string name="menu_detail_set_background">Đặt ảnh nền</string>
    <string name="menu_detail_edit">Chỉnh sửa</string>
    <string name="menu_detail_delete">Xóa</string>
    <string name="menu_detail_favorite">Yêu thích</string>
    <string name="album_picker">Choose an album to copy file</string>
    <string name="Cancel">Cancel</string>
    <string name="emoji_select">Select an emoji to add to image</string>

</resources>