<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/heart"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:contentDescription="@string/content_description_more"
        android:title="@string/NewAlbum"
        app:showAsAction="never" />

</menu>